--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,9 @@
 @import "abstract/mixins";
 @import "abstract/variables";
 
+@import "base/animations";
 @import "base/base";
+@import "base/typography";
 @import "base/utils";
 
 @import "pages/home";
