--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,4 +7,9 @@
 @import "base/typography";
 @import "base/utils";
 
+@import "layout/about";
+@import "layout/footer";
+@import "layout/header";
+@import "layout/projects";
+
 @import "pages/home";
