--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,3 +16,13 @@ body {
     font-size: 1.4rem;
     line-height: 1.5;
 }
+
+.container {
+    display: grid;
+    grid-template-areas: "head head"
+                        "about projects"
+                        "footer footer";
+    & > * {
+        padding: 5rem;
+    }
+}
