images and processing sizes for header

--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,15 @@ html {
 body {
   font-family: "Rubik", sans-serif;
   font-size: 1.4rem;
-  line-height: 1.5; }
+  line-height: 1.5;
+  background-color: #2c3e50; }
 
 .container {
+  width: 90%;
+  margin: 1rem auto;
+  background-color: #34495e;
   display: grid;
-  grid-template-areas: "head head" "about projects" "footer footer"; }
-  .container > * {
-    padding: 5rem; }
+  grid-template-areas: "head head" "about about" "projects projects" "footer footer"; }
 
 .section-about {
   background-color: blue;
@@ -29,9 +31,15 @@ body {
   grid-area: footer; }
 
 .header {
-  background-color: red;
-  grid-area: head; }
+  grid-area: head;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../../img/responsive-image.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
 
 .section-projects {
   background-color: green;
   grid-area: projects; }
+
+.header {
+  height: 85vh; }
