header completed with background video

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,18 +1,7 @@
 .header {
     grid-area: head;
-    background-image: linear-gradient(to right, rgba($color-black, .6), rgba($color-black, .6)), url(../../img/header-image3.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
-    
-    
-
-    &__box {
-        
-
-        &--heading {   
-           
-        }
-    }
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    position: relative;
 }
