--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,8 @@ body {
   background-color: #2c3e50; }
 
 .container {
-  width: 90%;
-  margin: 1rem auto;
-  background-color: #34495e;
+  width: 100%;
+  margin: 0 auto;
   display: grid;
   grid-template-areas: "head" "about" "projects" "footer"; }
 
@@ -26,6 +25,19 @@ body {
   color: white;
   font-size: 10rem;
   letter-spacing: .35rem; }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: .1; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
 
 .section-about {
   background-color: blue;
@@ -37,10 +49,10 @@ body {
 
 .header {
   grid-area: head;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../../img/header-image3.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; }
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  position: relative; }
 
 .section-projects {
   background-color: green;
