--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,9 +19,8 @@ body {
 }
 
 .container {
-    width: 90%;
-    margin: 1rem auto;
-    background-color: $color-secondary-2;
+    width: 100%;
+    margin: 0 auto;
     display: grid;
     grid-template-areas: "head"
                          "about"
