--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/typography";
 @import "base/utils";
 
+@import "components/bg-video";
+
 @import "layout/about";
 @import "layout/footer";
 @import "layout/header";
