--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,3 +3,20 @@
     font-size: 10rem;
     letter-spacing: .35rem;
 }
+
+.sub-heading {
+    color: white;
+    font-size: 5rem;
+    letter-spacing: .15rem;
+}
+
+.tert-heading {
+    color: white;
+    font-size: 3.5rem;
+    letter-spacing: .1rem;
+}
+
+.copy-normal {
+    color: white;
+    font-size: 2rem;
+}
