--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,4 +4,18 @@
     justify-content: center;
     align-content: center;
     position: relative;
-}
+    
+    &__box {
+        backface-visibility: hidden;
+
+        &--subheading {
+            animation-name: moveDown;
+            animation-duration: 1.75s;
+            animation-timing-function: ease-out;
+        }
+        &--copy {
+            animation-name: moveInLeftLong;
+            animation-duration: 4s;
+        }    
+    }
+  }
