--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -10,10 +10,10 @@
     }
 }
 
-@keyframes moveInLeftLong {
+@keyframes moveDownLong {
     0% {
         opacity: 0;
-        transform: translateX(-800rem);
+        transform: translateY(-800rem);
     }
 
     100% {
