--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,7 +14,7 @@
             animation-timing-function: ease-out;
         }
         &--copy {
-            animation-name: moveDownLong;
+            animation-name: moveLong;
             animation-duration: 4s;
         }    
     }
