--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -9,6 +9,7 @@ $font-secondary: 'Crimson Text', serif;
 //COLORS /////////////////////////////////////////////////////
 $color-black: #000;
 $color-white: #eee;
+$color-softWhite: rgb(197, 197, 197);
 $color-primary-light: #4cd137;
 $color-primary-dark: #27ae60;
 $color-secondary-1: #2c3e50;
