--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -13,7 +13,7 @@
 @keyframes moveLong {
     0% {
         opacity: 0;
-        transform: translateX(800rem);
+        transform: translateY(-300rem);
     }
 
     100% {
