--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,7 +6,7 @@
 
 .sub-heading {
     color: white;
-    font-size: 5rem;
+    font-size: 6rem;
     letter-spacing: .15rem;
 }
 
@@ -18,5 +18,8 @@
 
 .copy-normal {
     color: white;
-    font-size: 2rem;
+    font-size: 2.75rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    word-spacing: .1rem;
 }
