little edits, header and about still finished

--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -11,8 +11,8 @@
     padding: 3rem;
 
     &--copy {
-        font-family: $font-secondary;
-        font-size: 3rem;
+        // font-family: $font-secondary;
+        font-size: 2.85rem;
         font-weight: 700;
         line-height: 2;
         color: $color-softWhite;
