footer about done, fonts and animations from header changed

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,7 +1,14 @@
-
+/*
+font-family: 'Finger Paint', cursive;
+font-family: 'Freckle Face', cursive;
+font-family: 'Lacquer', cursive;
+font-family: 'Nosifer', cursive;
+font-family: 'Rubik', sans-serif;
+*/
 //FONTS //////////////////////////////////////////////////////
 $font-primary: 'Rubik', sans-serif;
 $font-secondary: 'Crimson Text', serif; 
+$font-tertiary: 'Finger Paint', cursive;
 /////////////////////////////////////////////////////////////
 
 
