--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,7 +7,8 @@
 .sub-heading {
     color: white;
     font-size: 6rem;
-    letter-spacing: .15rem;
+    letter-spacing: .5rem;
+    word-spacing: .25rem;
 }
 
 .tert-heading {
