--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,17 @@
+/*
+font-family: 'Finger Paint', cursive;
+font-family: 'Freckle Face', cursive;
+font-family: 'Lacquer', cursive;
+font-family: 'Nosifer', cursive;
+font-family: 'Rubik', sans-serif;
+*/
 @keyframes moveDown {
   0% {
     opacity: 0;
-    transform: translateY(-50rem); }
+    transform: rotate(30deg); }
+  80% {
+    opacity: 1;
+    transform: rotate(-10deg); }
   100% {
     opacity: 1;
     transform: translate(0); } }
@@ -9,7 +19,10 @@
 @keyframes moveLong {
   0% {
     opacity: 0;
-    transform: translateY(-300rem); }
+    transform: rotate(30deg); }
+  80% {
+    opacity: 1;
+    transform: rotate(-10deg); }
   100% {
     opacity: 1;
     transform: translate(0); } }
@@ -45,7 +58,8 @@ body {
 .sub-heading {
   color: white;
   font-size: 6rem;
-  letter-spacing: .15rem; }
+  letter-spacing: .5rem;
+  word-spacing: .25rem; }
 
 .tert-heading {
   color: white;
@@ -74,25 +88,33 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed; }
 
 .about__box {
-  padding: 3rem; }
+  padding: 3rem;
+  display: grid;
+  grid-template-areas: "copy1 copy2";
+  align-items: center; }
   .about__box--copy {
-    font-size: 2.85rem;
+    font-size: 2.5rem;
     font-weight: 700;
     line-height: 2;
     color: #c5c5c5; }
-    .about__box--copy:not(:last-child) {
-      margin-top: 5rem;
-      margin-bottom: 5rem; }
+  .about__box--one {
+    grid-area: copy1;
+    padding: 3.5rem;
+    line-height: 2; }
+  .about__box--two {
+    grid-area: copy2;
+    padding: 3.5rem;
+    line-height: 2; }
 
 .footer {
-  background-color: purple;
+  background-color: #2c3e50;
   grid-area: footer; }
 
 .header {
@@ -100,16 +122,19 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
-  position: relative; }
+  font-family: "Finger Paint", cursive; }
   .header__box {
     backface-visibility: hidden; }
     .header__box--subheading {
       animation-name: moveDown;
       animation-duration: 1.75s;
-      animation-timing-function: ease-out; }
+      animation-timing-function: ease-out;
+      animation-delay: .25s; }
     .header__box--copy {
       animation-name: moveLong;
-      animation-duration: 4s; }
+      animation-duration: 1.75s;
+      animation-timing-function: ease-out;
+      animation-delay: .25s; }
 
 .section-projects {
   background-color: green;
@@ -123,3 +148,6 @@ body {
 
 .section-about {
   height: 95vh; }
+
+.footer {
+  height: 30vh; }
