--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .section-about {
     grid-area: about;
-    background-image: linear-gradient(rgba($color-black, .9), rgba($color-black, .9)), url(../../img/about-2.jpeg);
+    background-image: linear-gradient(rgba($color-black, .85), rgba($color-black, .85)), url(../../img/about-2.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -9,16 +9,27 @@
 
 .about__box {
     padding: 3rem;
+    display: grid;
+    grid-template-areas: "copy1 copy2";
+    // align-content: center;
+    align-items: center;
 
     &--copy {
-        // font-family: $font-secondary;
-        font-size: 2.85rem;
+        font-size: 2.5rem;
         font-weight: 700;
         line-height: 2;
         color: $color-softWhite;
-        &:not(:last-child) {
-            margin-top: 5rem;
-            margin-bottom: 5rem;
-        }
+    }
+
+    &--one {
+        grid-area: copy1;
+        padding: 3.5rem;
+        line-height: 2;
+    }
+
+    &--two {
+        grid-area: copy2;
+        padding: 3.5rem;
+        line-height: 2;
     }
 }
