--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ font-family: 'Rubik', sans-serif;
 @keyframes moveDown {
   0% {
     opacity: 0;
-    transform: rotate(30deg); }
+    transform: rotate(10deg); }
   80% {
     opacity: 1;
     transform: rotate(-10deg); }
@@ -19,7 +19,7 @@ font-family: 'Rubik', sans-serif;
 @keyframes moveLong {
   0% {
     opacity: 0;
-    transform: rotate(30deg); }
+    transform: rotate(10deg); }
   80% {
     opacity: 1;
     transform: rotate(-10deg); }
@@ -86,6 +86,24 @@ body {
     width: 100%;
     object-fit: cover; }
 
+.navigation {
+  margin-top: 2rem;
+  list-style: none;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly; }
+  .navigation__link {
+    display: inline-block;
+    font-size: 3rem;
+    transition: all .2s; }
+    .navigation__link--item {
+      text-decoration: none;
+      color: white; }
+    .navigation__link:link, .navigation__link:visited, .navigation__link:active {
+      display: inline-block; }
+    .navigation__link:hover {
+      transform: translateY(-1.5rem) scale(1.15); }
+
 .section-about {
   grid-area: about;
   background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../../img/about-2.jpeg);
@@ -115,7 +133,12 @@ body {
 
 .footer {
   background-color: #2c3e50;
-  grid-area: footer; }
+  grid-area: footer;
+  display: flex;
+  justify-content: space-evenly; }
+  .footer__box--copy {
+    border-top: 1px solid white;
+    width: 100%; }
 
 .header {
   grid-area: head;
@@ -127,12 +150,12 @@ body {
     backface-visibility: hidden; }
     .header__box--subheading {
       animation-name: moveDown;
-      animation-duration: 1.75s;
+      animation-duration: 1s;
       animation-timing-function: ease-out;
       animation-delay: .25s; }
     .header__box--copy {
       animation-name: moveLong;
-      animation-duration: 1.75s;
+      animation-duration: 1s;
       animation-timing-function: ease-out;
       animation-delay: .25s; }
 
@@ -150,4 +173,4 @@ body {
   height: 95vh; }
 
 .footer {
-  height: 30vh; }
+  height: 20vh; }
