--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,11 @@
 .footer {
     background-color: $color-secondary-1;
     grid-area: footer;
+    display: flex;
+    justify-content: space-evenly;
+    &__box--copy {
+        border-top: 1px solid white;
+        width: 100%;
+    }
 }
+
