--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/utils";
 
 @import "components/bg-video";
+@import "components/navigation";
 
 @import "layout/about";
 @import "layout/footer";
