--- a/css/style.css
+++ b/css/style.css
@@ -110,26 +110,22 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  align-items: center; }
 
 .about__box {
   padding: 3rem;
-  display: grid;
-  grid-template-areas: "copy1 copy2";
-  align-items: center; }
+  grid-column: 1 / 1;
+  grid-row: 1 / 1; }
   .about__box--copy {
     font-size: 2.5rem;
     font-weight: 700;
     line-height: 2;
+    word-spacing: .5rem;
     color: #c5c5c5; }
-  .about__box--one {
-    grid-area: copy1;
-    padding: 3.5rem;
-    line-height: 2; }
-  .about__box--two {
-    grid-area: copy2;
-    padding: 3.5rem;
-    line-height: 2; }
 
 .footer {
   background-color: #2c3e50;
