--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -5,31 +5,23 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
 }
 
 .about__box {
     padding: 3rem;
-    display: grid;
-    grid-template-areas: "copy1 copy2";
-    // align-content: center;
-    align-items: center;
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+   
 
     &--copy {
         font-size: 2.5rem;
         font-weight: 700;
         line-height: 2;
+        word-spacing: .5rem;
         color: $color-softWhite;
-    }
-
-    &--one {
-        grid-area: copy1;
-        padding: 3.5rem;
-        line-height: 2;
-    }
-
-    &--two {
-        grid-area: copy2;
-        padding: 3.5rem;
-        line-height: 2;
     }
 }
