--- a/css/style.css
+++ b/css/style.css
@@ -56,18 +56,18 @@ body {
   letter-spacing: .35rem; }
 
 .sub-heading {
-  color: white;
+  color: #4cd137;
   font-size: 6rem;
   letter-spacing: .5rem;
   word-spacing: .25rem; }
 
 .tert-heading {
-  color: white;
+  color: #4cd137;
   font-size: 3.5rem;
   letter-spacing: .1rem; }
 
 .copy-normal {
-  color: white;
+  color: #4cd137;
   font-size: 2.75rem;
   font-weight: 700;
   letter-spacing: .1rem;
@@ -89,16 +89,14 @@ body {
 .navigation {
   margin-top: 2rem;
   list-style: none;
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly; }
+  width: 100%; }
   .navigation__link {
     display: inline-block;
     font-size: 3rem;
     transition: all .2s; }
     .navigation__link--item {
       text-decoration: none;
-      color: white; }
+      color: #4cd137; }
     .navigation__link:link, .navigation__link:visited, .navigation__link:active {
       display: inline-block; }
     .navigation__link:hover {
@@ -106,7 +104,7 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -129,11 +127,9 @@ body {
 
 .footer {
   background-color: #2c3e50;
-  grid-area: footer;
-  display: flex;
-  justify-content: space-evenly; }
+  grid-area: footer; }
   .footer__box--copy {
-    border-top: 1px solid white;
+    border-top: 5px solid #27ae60;
     width: 100%; }
 
 .header {
@@ -141,7 +137,7 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
-  font-family: "Finger Paint", cursive; }
+  font-family: "Rubik", sans-serif; }
   .header__box {
     backface-visibility: hidden; }
     .header__box--subheading {
