--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,20 +5,20 @@
 }
 
 .sub-heading {
-    color: white;
+    color: $color-primary-light;;
     font-size: 6rem;
     letter-spacing: .5rem;
     word-spacing: .25rem;
 }
 
 .tert-heading {
-    color: white;
+    color: $color-primary-light;
     font-size: 3.5rem;
     letter-spacing: .1rem;
 }
 
 .copy-normal {
-    color: white;
+    color: $color-primary-light;
     font-size: 2.75rem;
     font-weight: 700;
     letter-spacing: .1rem;
