--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,8 +3,7 @@
     display: grid;
     justify-content: center;
     align-content: center;
-    font-family: $font-tertiary;
-    
+    font-family: $font-primary;
     
     &__box {
         backface-visibility: hidden;
