--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,9 @@ body {
 .navigation {
   margin-top: 2rem;
   list-style: none;
-  width: 100%; }
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly; }
   .navigation__link {
     display: inline-block;
     font-size: 3rem;
@@ -127,10 +129,11 @@ body {
 
 .footer {
   background-color: #2c3e50;
-  grid-area: footer; }
+  grid-area: footer;
+  text-align: center; }
   .footer__box--copy {
-    border-top: 5px solid #27ae60;
-    width: 100%; }
+    margin-top: 5rem;
+    margin-bottom: 1rem; }
 
 .header {
   grid-area: head;
@@ -141,18 +144,14 @@ body {
   .header__box {
     backface-visibility: hidden; }
     .header__box--subheading {
-      animation-name: moveDown;
-      animation-duration: 1s;
-      animation-timing-function: ease-out;
-      animation-delay: .25s; }
+      animation-duration: 4s;
+      animation-iteration-count: 1; }
     .header__box--copy {
-      animation-name: moveLong;
-      animation-duration: 1s;
-      animation-timing-function: ease-out;
-      animation-delay: .25s; }
+      animation-duration: 4s;
+      animation-iteration-count: 1; }
 
 .section-projects {
-  background-color: green;
+  background-color: #000;
   grid-area: projects; }
 
 .header {
