--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -2,6 +2,8 @@
     margin-top: 2rem;
     list-style: none;
     width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 
     &__link {
         display: inline-block;
