--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,9 +1,10 @@
 .footer {
     background-color: $color-secondary-1;
     grid-area: footer;
+    text-align: center;
     &__box--copy {
-        border-top: 5px solid $color-primary-dark;
-        width: 100%;
+        margin-top: 5rem;
+        margin-bottom: 1rem;
     }
 }
 
