removed vendor animations in favor of manual coding for site speed optimization, header and about sections completed witih new copy

--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,16 @@ font-family: 'Rubik', sans-serif;
 @keyframes moveDown {
   0% {
     opacity: 0;
-    transform: rotate(10deg); }
+    transform: translateY(-20rem); }
+  40% {
+    opacity: 1;
+    transform: translateY(0.75rem); }
+  60% {
+    opacity: 1;
+    transform: translateY(-1.75rem); }
   80% {
     opacity: 1;
-    transform: rotate(-10deg); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
-
-@keyframes moveLong {
-  0% {
-    opacity: 0;
-    transform: rotate(10deg); }
-  80% {
-    opacity: 1;
-    transform: rotate(-10deg); }
+    transform: translateY(0.75rem); }
   100% {
     opacity: 1;
     transform: translate(0); } }
@@ -80,7 +75,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: .1; }
+  opacity: .15; }
   .bg-video__content {
     height: 100%;
     width: 100%;
@@ -106,26 +101,33 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.87), rgba(0, 0, 0, 0.87)), url(../../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  align-items: center; }
+  background-attachment: fixed; }
 
 .about__box {
   padding: 3rem;
-  grid-column: 1 / 1;
-  grid-row: 1 / 1; }
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, min-content);
+  align-items: center;
+  grid-row-gap: 5rem; }
   .about__box--copy {
-    font-size: 2.5rem;
+    font-size: 2.1rem;
     font-weight: 700;
     line-height: 2.25;
     word-spacing: .5rem;
-    color: #c5c5c5; }
+    text-align: justify;
+    color: #c5c5c5;
+    grid-column: 1 / 1; }
+    .about__box--copy-1 {
+      grid-row: 1 / 1; }
+    .about__box--copy-2 {
+      grid-row: 2 / 2; }
+    .about__box--copy-3 {
+      grid-row: 3 / 3; }
 
 .footer {
   background-color: #2c3e50;
@@ -138,24 +140,27 @@ body {
 .header {
   grid-area: head;
   display: grid;
-  justify-content: center;
+  justify-content: end;
   align-content: center;
   font-family: "Rubik", sans-serif; }
   .header__box {
-    backface-visibility: hidden; }
+    backface-visibility: hidden;
+    margin-right: 3rem; }
     .header__box--subheading {
+      animation-name: moveDown;
       animation-duration: 2s;
-      animation-iteration-count: infinite; }
+      animation-timing-function: ease-in; }
     .header__box--copy {
+      animation-name: moveDown;
       animation-duration: 2s;
-      animation-iteration-count: infinite; }
+      animation-timing-function: ease-in; }
 
 .section-projects {
   background-color: #000;
   grid-area: projects; }
 
 .header {
-  height: 70vh; }
+  height: 60vh; }
 
 .section-projects {
   height: 95vh; }
