--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,7 @@
 }
 
 .sub-heading {
-    color: $color-primary-light;;
+    color: $color-primary-light;
     font-size: 6rem;
     letter-spacing: .5rem;
     word-spacing: .25rem;
