--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
       animation-timing-function: ease-in; }
 
 .section-projects {
-  background-color: #000;
+  background-color: #2c3e50;
   grid-area: projects; }
 
 .header {
