--- a/css/style.css
+++ b/css/style.css
@@ -147,13 +147,9 @@ body {
     backface-visibility: hidden;
     margin-right: 3rem; }
     .header__box--subheading {
-      animation-name: moveDown;
-      animation-duration: 2s;
-      animation-timing-function: ease-in; }
+      animation: moveDown 2s ease-in; }
     .header__box--copy {
-      animation-name: moveDown;
-      animation-duration: 2s;
-      animation-timing-function: ease-in; }
+      animation: moveDown 2s ease-in; }
 
 .section-projects {
   background-color: #2c3e50;
