--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,7 +14,7 @@
         }
 
         &--copy {
-            animation: moveDown 2s ease-in; 
+            animation: moveDown 2s ease-out; 
         }    
     }
   }
