--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ font-family: 'Rubik', sans-serif;
   80% {
     opacity: 1;
     transform: translateY(0.75rem); }
+  90% {
+    opacity: 1;
+    transform: translateY(-0.75rem); }
   100% {
     opacity: 1;
     transform: translate(0); } }
@@ -149,7 +152,7 @@ body {
     .header__box--subheading {
       animation: moveDown 2s ease-in; }
     .header__box--copy {
-      animation: moveDown 2s ease-in; }
+      animation: moveDown 2s ease-out; }
 
 .section-projects {
   background-color: #2c3e50;
