--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -15,6 +15,7 @@ $font-tertiary: 'Finger Paint', cursive;
 
 //COLORS /////////////////////////////////////////////////////
 $color-black: #000;
+$color-softBlack: rgb(26, 25, 25);
 $color-white: #eee;
 $color-softWhite: rgb(197, 197, 197);
 $color-primary-light: #4cd137;
