--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -12,7 +12,7 @@
 
         &--item {
             text-decoration: none;
-            color: $color-primary-light;    
+            color: $color-primary-dark;    
         }
         
         &:link,
