--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,15 +1,4 @@
 .header {
-    height: 60vh;
-}
-
-.section-projects {
-    height: 95vh;
-}
-
-.section-about {
-    height: 95vh;
-}
-
-.footer {
-    height: 20vh;
+    height: 80vh;
+    position: relative;
 }
