--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: $color-secondary-1;
+    background-color: $color-softBlack;
     grid-area: footer;
     text-align: center;
     &__box--copy {
