--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,6 +1,6 @@
 .section-about {
     grid-area: about;
-    background-image: linear-gradient(rgba($color-black, .85), rgba($color-black, .85)), url(../../img/about-2.jpeg);
+    background-image: linear-gradient(rgba($color-black, .85), rgba($color-black, .85)), url(../img/about-2.jpeg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
