--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,6 +1,6 @@
 .section-projects {
     padding: 5rem;
-    background-image: linear-gradient(rgba($color-black, .85), rgba($color-black, .85)), url(../../img/project.jpeg);
+    background-image: linear-gradient(rgba($color-black, .85), rgba($color-black, .85)), url(../img/project.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     grid-area: projects;
