--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -105,7 +105,7 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(../../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -114,8 +114,9 @@ body {
 .about__box {
   padding: 3rem;
   display: grid;
-  grid-template-columns: 100rem;
+  grid-template-columns: 90rem;
   grid-template-rows: repeat(3, min-content);
+  justify-content: center;
   align-items: center;
   grid-row-gap: 5rem; }
   .about__box--copy {
@@ -179,7 +180,7 @@ body {
 
 .card__box {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
   grid-gap: 2rem;
   align-content: center; }
 
