--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -30,7 +30,7 @@
 
 .card__box {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
     grid-gap: 2rem;
     align-content: center;
 }
