--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -52,11 +52,19 @@ body {
   color: #4cd137;
   font-size: 8rem;
   word-spacing: .25rem; }
+  @media only screen and (min-width: 500px) {
+    .main-heading {
+      font-size: 4.5rem;
+      word-spacing: 0; } }
 
 .tert-heading {
   color: #4cd137;
   font-size: 3.5rem;
   letter-spacing: .1rem; }
+  @media only screen and (min-width: 500px) {
+    .tert-heading {
+      font-size: 2.25rem;
+      word-spacing: 0; } }
 
 .copy-normal {
   color: #4cd137;
@@ -105,7 +113,7 @@ body {
 
 .section-about {
   grid-area: about;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../img/about-2.jpeg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../../img/about-2.jpeg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
