--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,9 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+    @media only screen and(max-width: 500px) {
+        font-size: 55%;
+    }
 }
 
 body {
