--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -30,7 +30,7 @@
 
 .card__box {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(43rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
     grid-template-rows: repeat(auto-fill, min-content);
     grid-gap: 2rem;
 }
@@ -49,13 +49,20 @@
 
     &__info {
 
+        &--copyLink {
+            &:not(:last-child) {
+                margin-bottom: 3rem;
+                margin-top: 3rem;
+            }
+        }
+
         &--copy {
             padding: .25rem;
         }
 
         &--site,
         &--github {
-            font-size: 1.3rem;
+            font-size: 1.5rem;
             text-transform: uppercase;
         }
 
