--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,12 +3,20 @@
     color: $color-primary-light;
     font-size: 8rem;
     word-spacing: .25rem;
+    @media only screen and (max-width: 426px) {
+        font-size: 5rem;
+        word-spacing: none;
+    }
 }
 
 .tert-heading {
     color: $color-primary-light;
     font-size: 3.5rem;
     letter-spacing: .1rem;
+    @media only screen and (max-width: 426px) {
+        font-size: 2.25rem;
+        word-spacing: none;
+    }
 }
 
 .copy-normal {
