--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -30,8 +30,11 @@
 
 .card__box {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
-    grid-template-rows: repeat(auto-fill, min-content);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    @media only screen and (max-width: 426px) {
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    }
+    grid-template-rows: repeat(auto-fit, min-content);
     grid-gap: 2rem;
 }
 
